# PrimeFiniteField

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: FFp.h  Polynomial.h
tests/: FFprimeTest.cpp
